# objanimator

./: Cargo.toml
asyncfileio/: Cargo.toml
asyncfileio/src/: bufmanager.rs  lib.rs
cacher/: Cargo.toml
cacher/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  wavefrontobj.rs
shader/: shader.fs
src/: image_manager.rs  main.rs  vertex.rs
util/src/: lib.rs
