[package]
name = "asyncfileio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
tokio = {version = "1.15.0", features = ["sync", "fs", "rt", "io-util", "io-std", "time", "macros"]}
util = { path = "../util/"}
